device: Remove unmanaged slaves from master when they disappear

We've previously been just watching for state changes into UNMANAGED state. No
state change is emitted upon removal of a device which is already unmanaged.

https://bugzilla.gnome.org/show_bug.cgi?id=737659

(cherry picked from commit c83b40aca76fc0ed624a6c9e71dbd7b0abfa13f2)